<resources>
    <string name="app_name">ClassKonnect</string>
    <string name="first_sign_up_fragment_label">Sign Up</string>
    <string name="second_sign_up_fragment_label">Congrats</string>
    <string name="first_name">First Name</string>
    <string name="matric">Matric</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="continue_">Continue</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_error_message">Some random error occurred. You should probably try again</string>
    <string name="title_activity_login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_user">Home</string>
    <string name="app_logo">App logo</string>
    <string name="class_details_fragment_label">Start or join a class</string>
    <string name="welcome_back_fragment_label">Welcome Back</string>
    <string name="update_profile_fragment_label">My Profile</string>
    <string name="video_screen_fragment_label">Video Screen</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="class_name">Class Name</string>
    <string name="start_class">Start Class</string>
    <string name="join_class">Join Class</string>
    <string name="room_name">Room Name</string>
    <string name="course_code">Course Code (No Spaces)</string>
    <string name="title_activity_video">Video Call</string>
    <string name="welcome_back">Welcome back</string>
    <string name="good_day">Good Day</string>
    <string name="update">Update</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="verify_identity">Verify Identity</string>
    <string name="verify_identity_text">Enter your password, so we can know if it\'s really you</string>
    <string name="new_password">New Password</string>
    <string name="on_boarding_screens">On boarding Screens</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <!-- Validate Course Code-->
    <string name="course_code_blank_error">Course code can\'t be black</string>
    <string name="course_code_too_long_error">Course code must be 6 characters long</string>
    <string name="course_code_not_just_letters_and_numbers_error">Course code must only contain 3 letters and 3 numbers</string>
    <string name="course_code_not_3_letters_error">Course code must start with 3 letters</string>
    <string name="course_code_not_3_numbers_error">Course code must end with 3 numbers</string>

    <!-- Validate Email-->
    <string name="email_blank_error">Email can\'t be black</string>
    <string name="email_contains_uppercase_error">Email must not contain upper-case letters</string>
    <string name="email_format_invalid_error">That\'s not a valid email</string>

    <!-- Validate Log in Password-->
    <string name="password_blank_error">Password cannot be empty</string>

    <!-- Validate MAtric/Id-->
    <string name="matric_or_id_black_error">Matric/Id cannot be blank</string>
    <string name="matric_or_id_not_int_error">Matric/Id must be integer numbers</string>
    <string name="matric_id_too_short_error">Matric/Id must be more than 2 digits long</string>

    <!-- Validate Name-->
    <string name="name_blank_error">Name can\'t be black</string>
    <string name="password_not_contain_letter_error">Must contain at least one letter (A-Z or a-z)</string>
    <string name="password_less_that_8_error">Password cannot be less than 8 characters</string>
    <string name="password_not_contain_number_error">Must contain at least one digit (0-9)</string>
    <string name="password_not_contain_special_char_error">Must contain at least 1 special character</string>
    <string name="password_contain_space_error">Must no contain spaces</string>

    <!-- Validate Sign up Password-->

</resources>